--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | QR code component</title>
@@ -13,7 +13,7 @@
 <body>
   <div class="QrCard">
 
-    <image class="Qr" src="images/image-qr-code.png"></image>
+    <image class="Qr" src="image-qr-code.png"></image>
     <div class="content">
       <p class="one">Improve your front-end skills by building projects</p>
       <p class="two">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
